added prerequisites slide

--- a/instalacion/index.html
+++ b/instalacion/index.html
@@ -42,7 +42,15 @@
             <h3 class="fragment roll-in">Empecemos</h3>
 					</p>
 				</section>
-
+        <section>
+ 				  <h2>Prerequisitos:</h2>
+          <p>
+          En primer lugar debemos contar con un usb que permita arrancar la instalación de ubuntu.</br>
+          Puedes aprender como hacerlo <a href="../USBstick/index.html">aquí</a></br></br>
+ 				  <h3>Para empezar la instalación</h3>
+          Conecta el USB al portatil, pulsa el botón de encendido y mientras esté arrancando pulsa F11.
+          </p>
+        </section>
 				<section>
 			    Cuando el instalador arranque veremos esta pantalla:
           <img src="imgs/kubuntuinstallwelcome.png" />
